Adds optional auto JIRA ticketing behavior

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,13 @@ GITHUB_COMMENT_ID=1111111 # update with your comment id
 # GITHUB_REPOSITORY=presubmit/ai-reviewer # update with your fork
 # GITHUB_PULL_REQUEST=1 # update with your pull request number
 # GITHUB_COMMENT_ID=1111111 # update with your comment id
+
+# Optional: JIRA integration
+JIRA_HOST=https://your-domain.atlassian.net
+JIRA_USERNAME=your-email@company.com
+JIRA_API_TOKEN=your-jira-api-token
+JIRA_PROJECTS=PROJ1,PROJ2,PROJ3
+JIRA_DEFAULT_PROJECT=PROJ1
+
+# Debug mode
+DEBUG=false
