--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "DEBUG=true npx tsx -r dotenv/config src/main.ts",
     "build": "npx esbuild src/main.ts --bundle --platform=node --outfile=dist/index.js --minify",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "husky": "^9.1.7",
     "typescript": "^5.6.3"
   },
   "dependencies": {
